--- a/.env
+++ b/.env
@@ -24,7 +24,7 @@ APP_SECRET=2842e555986280ae1b4ca5883b6244e7
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-DATABASE_URL="mysql://root:root@127.0.0.1:3306/loudly?serverVersion=5.7&charset=utf8mb4"
+DATABASE_URL="mysql://root:root@127.0.0.1:3306/loudly1?serverVersion=5.7&charset=utf8mb4"
 #DATABASE_URL="postgresql://symfony:ChangeMe@127.0.0.1:5432/app?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
 
